# FZ-GPU

./: .gitignore  CMakeLists.txt  README-cmake.md  README.md
cmake/: FZGPUConfig.cmake.in  cuda.cmake
include/: fz_demo.hh  fz_driver.hh  fz_module.hh  fz_utils.hh
include/kernel/: lorenzo_var.cuh
src/: fz.cu  fz_cli.cc  fz_demo.cc  fz_driver.cc  fz_module.cu  fz_ms.cc  fz_ms_vecadd.cu  fz_utils.cc  fzgpu_version.h.in
